# foni

./: .gitignore  .gitleaks.toml  .secrets.baseline  README.md  agents.md  baseline.e2e.test.ts  depecher-panel.test.ts  dsp.test.ts  emotion.test.ts  engine.test.ts  filler.test.ts  foni-maquettes.json  foni-panel.test.ts  foni.test.ts  index.ts  index.ts.bak  integration.test.ts  justfile  latency.e2e.test.ts  lib.ts  package-lock.json  package.json  pipeline.e2e.test.ts  placement.test.ts  prosody.test.ts  rvc.e2e.test.ts  sidorovich.e2e.test.ts  stress.e2e.test.ts  translation-chunking.test.ts  tsconfig.json  tui-integration.test.ts  tuning-validate.test.ts  tuning.e2e.test.ts  vitest.config.ts  voice-quality.test.ts
.pi/: context.md
__snapshots__/: baseline.e2e.test.ts.snap  foni-panel.test.ts.snap  prosody.test.ts.snap  sidorovich.e2e.test.ts.snap  voice-quality.test.ts.snap
backends/: espeak.ts  fakeyou.ts  kokoro.ts  silero.ts
baseline/: gap-snapshot.json  target.json
core/: config.ts  emotion.ts  engine.ts  interfaces.ts  lexicon.ts  logger.ts  stream.ts  types.ts
depecher-server/: Cargo.toml
depecher-server/depecher-cli/: Cargo.toml
depecher-server/depecher-cli/src/: cmd_bench.rs  cmd_commentary.rs  cmd_common.rs  cmd_data.rs  cmd_quality.rs  cmd_render.rs  cmd_sweep_shades.rs  cmd_synth.rs  cmd_train.rs  cmd_tune.rs  cmd_voice.rs  depecherctl.rs  main.rs  modal_cloud.rs
depecher-server/depecher-cli/src/tui/: events.rs  mod.rs  state.rs  ui.rs
depecher-server/depecher-client/: Cargo.toml
depecher-server/depecher-client/src/: commentary.rs  error.rs  lib.rs  types.rs
depecher-server/depecherd/: Cargo.toml
depecher-server/depecherd/src/: config.rs  main.rs  wav.rs
depecher-server/depecherd/src/engine/: audio_stream.rs  emotion.rs  emotion_arc.rs  engine_config.rs  facade.rs  jitter.rs  lexicon.rs  stroke.rs  synth_backend.rs  translator.rs  ws.rs
depecher-server/depecherd/src/expression/: breath_route.rs
depecher-server/depecherd/src/quality/: analyse_route.rs  controller_route.rs  mod.rs
depecher-server/depecherd/src/quality/dsp/: controller.rs  effects.rs  policy.rs
depecher-server/depecherd/src/synth/: process_route.rs  synthesize_route.rs
depecher-server/depecherd/tests/: audio_stream_roundtrip.rs  concurrency.rs  e2e_simulation.rs  http_integration.rs  mute_stop_bugs.rs  security.rs  streaming_render.rs  tts_contract.rs  ws_integration.rs
depecher-server/depecherd/tests/support/: mod.rs
extensions/: buffer-widget.test.ts  buffer-widget.ts  modal-watcher.ts
foni-server/: Cargo.toml
foni-server/foni-analyse/: Cargo.toml
foni-server/foni-analyse/src/: alignment.rs  contour.rs  ecapa.rs  gap.rs  lib.rs  loudness.rs  mcd.rs  mfcc.rs  pitch.rs  report.rs  speaker_sim.rs  spectral.rs  tempo.rs  temporal.rs  timeline.rs  tone.rs  visqol.rs  voice.rs  wav.rs  wer.rs
foni-server/foni-analyse/tests/: sidorovich_integration.rs  timeline_integration.rs
foni-server/foni-cli/: Cargo.toml
foni-server/foni-cli/src/: cloud.rs  cmd_bench.rs  cmd_commentary.rs  cmd_common.rs  cmd_data.rs  cmd_quality.rs  cmd_render.rs  cmd_sweep_shades.rs  cmd_synth.rs  cmd_train.rs  cmd_tune.rs  cmd_voice.rs  cost.rs  fonictl.rs  main.rs  modal_cloud.rs
foni-server/foni-cli/src/tui/: events.rs  mod.rs  state.rs  ui.rs
foni-server/foni-client/: Cargo.toml
foni-server/foni-client/src/: commentary.rs  error.rs  lib.rs  types.rs
foni-server/foni-synth/: Cargo.toml  lexicon.yaml
foni-server/foni-synth/src/: config.rs  lib.rs  main.rs  sessions.rs  ssml.rs  state.rs  voice_index.rs  wav.rs
foni-server/foni-synth/src/dsp/: chain.rs  controller.rs  dynamics.rs  effects.rs  filters.rs  mod.rs  policy.rs
foni-server/foni-synth/src/engine/: audio_stream.rs  emotion_arc.rs  engine_config.rs  expression_palette.rs  facade.rs  jitter.rs  lexicon.rs  mod.rs  playback_buffer.rs  player.rs  stream.rs  stress.rs  stroke.rs  synth_backend.rs  train_events.rs  translator.rs  ws.rs
foni-server/foni-synth/src/expression/: mod.rs  ssml.rs  ssml_params_route.rs
foni-server/foni-synth/src/quality/: analyse_route.rs  controller_route.rs
foni-server/foni-synth/src/quality/dsp/: chain.rs  controller.rs  policy.rs
foni-server/foni-synth/src/routes/: analyse.rs  breath.rs  controller.rs  convert.rs  metrics.rs  mod.rs  models.rs  params.rs  process.rs  ssml_params.rs  synthesize.rs
foni-server/foni-synth/src/synth/: cache_route.rs  mod.rs  process_route.rs  synthesize_route.rs
foni-server/foni-synth/tests/: audio_stream_roundtrip.rs  concurrency.rs  e2e_simulation.rs  http_integration.rs  mute_stop_bugs.rs  onnx_validation.rs  pool_concurrency.rs  security.rs  streaming_render.rs  tts_contract.rs  ws_cutoff.rs  ws_integration.rs
foni-server/foni-synth/tests/support/: mod.rs
output/: ariel_stalker.m4a  booking-engine-rogan.md  booking-engine-spec.md  chaim_mushrooms.m4a  diomedes_to_julian.m4a  diomedes_to_julian_v2.m4a  diomedes_to_julian_v3.m4a  dmitry_good_day.m4a  rogan-booking-engine.json  rogan-test.json  yuri_sidorovich.m4a  yuri_sidorovich_v2.m4a  yuval_doctor.m4a  yuval_sidorovich_reply.m4a  yuval_sidorovich_reply2.m4a
pipeline/: audio-test-utils.ts  audio-utils.ts  breath-injector.ts  gap-scorer.ts  interfaces.ts  player.ts  processors.ts  prosody.ts  speak-facade.ts  spectrogram.ts  synth-backend.ts  test-signals.ts  translators.budget.test.ts  translators.ts  voice-quality.ts  wav-utils.ts
rvc/: Containerfile  Containerfile.serverless  Containerfile.train  acoustic-policy.rhai  dsp-defaults.json  export_contentvec_onnx.py  export_ecapa_onnx.py  export_onnx.py  export_voice_index.py  facade.py  fish-finetune.py  foni-rvc.service  handler.py  modal-train.py  pod-train.py  runpod-openapi.json  score.py  test_pod_train.py
scripts/: analyse.mjs  baseline-analyse.mts  extract-speaker-embed.py  extract-timeline.py  f0-dump.mts  gap-report.mts  gen_samples.py  listen.mjs
test/: 00_preflight.test.ts  audio-test-utils.ts  audio.ts  corpus.ts  env.ts  preflight.ts  services.ts  stubs.ts
training/: acoustic-policy.rhai  dsp-defaults.json  start.sh  (+10 more)
(+31 files in other folders)
