[workspace]
members  = ["foni-synth", "foni-analyse", "foni-cli", "foni-client"]
resolver = "2"

# Clippy lints applied to every crate in the workspace.
# Run: cargo clippy --workspace --all-targets -- -D warnings
[workspace.lints.rust]
unused_imports      = "warn"
dead_code           = "warn"
unreachable_pub     = "warn"

[workspace.lints.clippy]
pedantic                 = { level = "warn", priority = -1 }
module_name_repetitions  = "allow"
must_use_candidate       = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
cast_precision_loss      = "allow"
cast_possible_truncation = "allow"
cast_sign_loss           = "allow"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["danypops"]

[workspace.dependencies]
# async runtime
tokio        = { version = "1",    features = ["full"] }

# HTTP server
axum         = { version = "0.7",  features = ["macros", "ws", "multipart"] }
tower        = "0.4"
tower-http   = { version = "0.5",  features = ["trace"] }

# serialization
serde        = { version = "1",    features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"

# audio I/O + DSP
hound        = "3"
rustfft      = "6"
ebur128      = "0.1"

# pitch detection — pYIN algorithm (same as librosa)
pyin             = "1.2"
pitch-detection  = "0.3"
rayon            = "1"
ndarray      = "0.15"
rand         = "0.8"
lru          = "0.12"
sha2         = "0.10"
clap         = { version = "4", features = ["derive", "env"] }
dialoguer    = "0.11"
indicatif    = "0.17"

# ONNX runtime — RVC model inference
ort          = { version = "2.0.0-rc.12", features = ["copy-dylibs"] }

# utility
base64       = "0.22"
reqwest      = { version = "0.12", features = ["json", "blocking", "multipart"] }
tempfile     = "3"
thiserror    = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
