[package]
name    = "depecher-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "depecher-cli"
path = "src/main.rs"

[[bin]]
name = "depecherctl"
path = "src/depecherctl.rs"

[dependencies]
depecher-analyse = { path = "../depecher-analyse" }
depecherd   = { path = "../depecherd" }
modal-rs     = { workspace = true }
clap         = { workspace = true }
dialoguer    = { workspace = true }
indicatif    = { workspace = true }
hound        = { workspace = true }
serde        = { workspace = true }
base64       = { workspace = true }
depecher-client  = { path = "../depecher-client" }
rayon        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
reqwest      = { workspace = true }
tokio        = { workspace = true }
thiserror    = { workspace = true }
tabled       = "0.21"
chrono       = "0.4"
owo-colors   = "4"
console      = "0.15"
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui      = "0.29"
crossterm    = { version = "0.28", features = ["event-stream"] }
futures      = "0.3"

[dev-dependencies]
tempfile     = "3"
