[package]
name    = "depecher-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64     = { workspace = true }
reqwest    = { version = "0.12", features = ["json"] }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true }

[lints]
workspace = true
