[package]
name    = "depecherd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio        = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
async-trait  = { workspace = true }
once_cell    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
figment      = { version = "0.10", features = ["yaml", "json", "env"] }
rhai         = { version = "1.25", features = ["sync"] }
ebur128      = { workspace = true }
hound        = { workspace = true }
ndarray      = { workspace = true }
rustfft      = { workspace = true }
rand         = { workspace = true }
lru          = { workspace = true }
sha2         = { workspace = true }
tempfile     = { workspace = true }
ort          = { workspace = true }
base64       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
depecher-analyse = { path = "../depecher-analyse" }
rayon        = { workspace = true }
regex        = "1"
futures      = "0.3"
depecher-client  = { path = "../depecher-client" }
reqwest      = { workspace = true }

[dev-dependencies]
reqwest      = { workspace = true }
futures      = "0.3"
tokio-tungstenite = { version = "0.26", features = ["connect"] }
