[package]
name    = "foni-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "foni-cli"
path = "src/main.rs"

[[bin]]
name = "fonictl"
path = "src/fonictl.rs"

[dependencies]
foni-analyse = { path = "../foni-analyse" }
foni-synth   = { path = "../foni-synth" }
clap         = { workspace = true }
dialoguer    = { workspace = true }
indicatif    = { workspace = true }
hound        = { workspace = true }
serde        = { workspace = true }
base64       = { workspace = true }
foni-client  = { path = "../foni-client" }
rayon        = { workspace = true }
serde_json   = { workspace = true }
reqwest      = { workspace = true }
tokio        = { workspace = true }
thiserror    = { workspace = true }
tabled       = "0.21"
chrono       = "0.4"
owo-colors   = "4"
ratatui      = "0.29"
crossterm    = { version = "0.28", features = ["event-stream"] }
