[package]
name    = "foni-synth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio        = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
ebur128      = { workspace = true }
hound        = { workspace = true }
ort          = { workspace = true }
base64       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }

foni-analyse = { path = "../foni-analyse" }
