[package]
name    = "foni-synth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio        = { workspace = true }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
figment      = { version = "0.10", features = ["yaml", "json", "env"] }
rhai         = { version = "1.25", features = ["sync"] }
ebur128      = { workspace = true }
hound        = { workspace = true }
ndarray      = { workspace = true }
rustfft      = { workspace = true }
rand         = { workspace = true }
lru          = { workspace = true }
sha2         = { workspace = true }
tempfile     = { workspace = true }
ort          = { workspace = true }
base64       = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
foni-analyse = { path = "../foni-analyse" }
rayon        = { workspace = true }
regex        = "1"
futures      = "0.3"

[dev-dependencies]
reqwest      = { workspace = true }
futures      = "0.3"
